fix(Alert): fix alert align styles

--- a/src/components/Alert/Alert.scss
+++ b/src/components/Alert/Alert.scss
@@ -83,6 +83,11 @@ $block: '.#{variables.$ns}alert';
 
         &_layout_horizontal {
             flex-direction: row;
+            align-items: var(--_--align);
+
+            #{$block}__actions {
+                margin-inline-start: auto;
+            }
         }
     }
 
